add lazy find skeleton 2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="container">
+        <!-- <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
         <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
         <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
         <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
@@ -19,8 +20,7 @@
         <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
         <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
         <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
-        <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
-        <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg">
+        <img class="ylazy" data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1547205706476&di=f4bb1df5beb7e5133e5ce6e0e180d632&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F0a52dca458e82eb53802aaca2752d7b7e97289af.jpg"> -->
     </div>
 
     <div class="yskeleton" row="5">
@@ -56,13 +56,13 @@
 
 
     <script>
-        setTimeout(function () {
-            var arr = document.querySelectorAll('.yskeleton')
-            arr.forEach(element => {
-                var cls = element.getAttribute('class')
-                element.setAttribute('class', cls + ' loaded');
-            });
-        }, 3000)
+        // setTimeout(function () {
+        //     var arr = document.querySelectorAll('.yskeleton')
+        //     arr.forEach(element => {
+        //         var cls = element.getAttribute('class')
+        //         element.setAttribute('class', cls + ' loaded');
+        //     });
+        // }, 3000)
     </script>
 </body>
 
